--- a/src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj
+++ b/src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj
@@ -7,6 +7,7 @@
   <Import Project="../../common.props" />
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.4.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
   </ItemGroup>
 
