--- a/src/Wodsoft.ComBoost.Data.Core/Wodsoft.ComBoost.Data.Core.csproj
+++ b/src/Wodsoft.ComBoost.Data.Core/Wodsoft.ComBoost.Data.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>ComBoost实体模块核心。</Description>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <RootNamespace />
   </PropertyGroup>
   <Import Project="../../common.props" />
