--- a/src/Wodsoft.ComBoost.Aggregation.Mvc/Wodsoft.ComBoost.Aggregation.Mvc.csproj
+++ b/src/Wodsoft.ComBoost.Aggregation.Mvc/Wodsoft.ComBoost.Aggregation.Mvc.csproj
@@ -1,8 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Description>ComBoost聚合服务Mvc支持。</Description>
     <TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
   </PropertyGroup>
+  <Import Project="../../common.props" />
 
   <ItemGroup Condition="'$(TargetFramework)'== 'netcoreapp2.1'">
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.0" />
