--- a/test/Wodsoft.ComBoost.Mvc.Data.Test/Wodsoft.ComBoost.Mvc.Data.Test.csproj
+++ b/test/Wodsoft.ComBoost.Mvc.Data.Test/Wodsoft.ComBoost.Mvc.Data.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.ExpressionMapping" Version="4.1.3" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.0" />
