--- a/src/Wodsoft.ComBoost.Security/Wodsoft.ComBoost.Security.csproj
+++ b/src/Wodsoft.ComBoost.Security/Wodsoft.ComBoost.Security.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.0" />
     <PackageReference Include="System.Security.Claims" Version="4.3.0" />
   </ItemGroup>
 
