--- a/src/Wodsoft.ComBoost/Wodsoft.ComBoost.csproj
+++ b/src/Wodsoft.ComBoost/Wodsoft.ComBoost.csproj
@@ -7,10 +7,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Wodsoft.ComBoost.Core\Wodsoft.ComBoost.Core.csproj" />
+    <ProjectReference Include="..\Wodsoft.ComBoost.Security\Wodsoft.ComBoost.Security.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.0" />
     <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
   </ItemGroup>
 
