ComBoost.Core enable nullable object feature

--- a/src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj
+++ b/src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj
@@ -1,8 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>ComBoost框架核心。</Description>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <RootNamespace>Wodsoft.ComBoost</RootNamespace>
+    <LangVersion>10.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <Import Project="../../common.props" />
 
