ComBoost.Data.Core enable object nullable feature

--- a/src/Wodsoft.ComBoost.Data.Core/Wodsoft.ComBoost.Data.Core.csproj
+++ b/src/Wodsoft.ComBoost.Data.Core/Wodsoft.ComBoost.Data.Core.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <Description>ComBoost实体模块核心。</Description>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <LangVersion>10.0</LangVersion>
+    <Nullable>enable</Nullable>
     <RootNamespace />
   </PropertyGroup>
   <Import Project="../../common.props" />
