--- a/common.props
+++ b/common.props
@@ -20,7 +20,7 @@
     <NoWarn>1701;1702;CS1591</NoWarn>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'netcoreapp2.1'">
     <NoWarn>$(NoWarn);nullable</NoWarn>
   </PropertyGroup>
 
