--- a/src/Wodsoft.ComBoost.Distributed/Wodsoft.ComBoost.Distributed.csproj
+++ b/src/Wodsoft.ComBoost.Distributed/Wodsoft.ComBoost.Distributed.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <Description>ComBoost分布式基础。</Description>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <LangVersion>10.0</LangVersion>
+    <Nullable>enable</Nullable>
     <RootNamespace>Wodsoft.ComBoost</RootNamespace>
   </PropertyGroup>
   <Import Project="../../common.props" />
