--- a/src/Wodsoft.ComBoost.Security/Wodsoft.ComBoost.Security.csproj
+++ b/src/Wodsoft.ComBoost.Security/Wodsoft.ComBoost.Security.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>ComBoost安全模块。</Description>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <LangVersion>10.0</LangVersion>
+    <Nullable>enable</Nullable>
     <RootNamespace>Wodsoft.ComBoost</RootNamespace>
   </PropertyGroup>
   <Import Project="../../common.props" />
