--- a/test/Wodsoft.ComBoost.Test/Wodsoft.ComBoost.Test.csproj
+++ b/test/Wodsoft.ComBoost.Test/Wodsoft.ComBoost.Test.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Wodsoft.ComBoost.Mock\Wodsoft.ComBoost.Mock.csproj" />
     <ProjectReference Include="..\..\src\Wodsoft.ComBoost\Wodsoft.ComBoost.csproj" />
     <ProjectReference Include="..\Wodsoft.ComBoost.Test.Common\Wodsoft.ComBoost.Test.Common.csproj" />
   </ItemGroup>
