--- a/test/Wodsoft.ComBoost.Data.Test/Wodsoft.ComBoost.Data.Test.csproj
+++ b/test/Wodsoft.ComBoost.Data.Test/Wodsoft.ComBoost.Data.Test.csproj
@@ -19,7 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Lokad.ILPack" Version="0.1.6" />
+    <!--<PackageReference Include="Lokad.ILPack" Version="0.1.6" />-->
   </ItemGroup>
 
   <ItemGroup>
