--- a/src/Wodsoft.ComBoost/Wodsoft.ComBoost.csproj
+++ b/src/Wodsoft.ComBoost/Wodsoft.ComBoost.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.0" />
     <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
   </ItemGroup>
 
