--- a/test/Wodsoft.ComBoost.SourceGenerators.Test/Wodsoft.ComBoost.SourceGenerators.Test.csproj
+++ b/test/Wodsoft.ComBoost.SourceGenerators.Test/Wodsoft.ComBoost.SourceGenerators.Test.csproj
@@ -2,27 +2,29 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-
+    <ImplicitUsings>enable</ImplicitUsings>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.4.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing.XUnit" Version="1.1.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="3.1.0">
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Wodsoft.ComBoost.EntityFrameworkCore\Wodsoft.ComBoost.EntityFrameworkCore.csproj" />
-    <ProjectReference Include="..\Wodsoft.ComBoost.Test.Common\Wodsoft.ComBoost.Test.Common.csproj" />
+    <ProjectReference Include="..\..\src\Wodsoft.ComBoost.Core\Wodsoft.ComBoost.Core.csproj" />
+    <ProjectReference Include="..\..\src\Wodsoft.ComBoost.SourceGenerators\Wodsoft.ComBoost.SourceGenerators.csproj" />
   </ItemGroup>
-  
 
 </Project>
