Pack code analysis dll

--- a/src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj
+++ b/src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj
@@ -11,6 +11,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" PrivateAssets="all" GeneratePathProperty="true"/>
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.4.0" PrivateAssets="all" GeneratePathProperty="true"/>
+    <BuildOutputInPackage Include="$(PKGMicrosoft_CodeAnalysis_CSharp)\lib\netstandard2.0\Microsoft.CodeAnalysis.CSharp.dll" TargetPath="/analyzers/dotnet/cs/Microsoft.CodeAnalysis.CSharp.dll"/>
+    <BuildOutputInPackage Include="$(PKGMicrosoft_CodeAnalysis_Common)\lib\netstandard2.0\Microsoft.CodeAnalysis.dll" TargetPath="/analyzers/dotnet/cs/Microsoft.CodeAnalysis.dll"/>
   </ItemGroup>
 
   <ItemGroup>
@@ -23,16 +27,11 @@
 
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="BuildOnlySettings;ResolveReferences">
     <ItemGroup>
-      <!-- Filter out unnecessary files -->
       <_ReferenceCopyLocalPaths Include="@(ReferenceCopyLocalPaths->WithMetadataValue('ReferenceSourceTarget', 'ProjectReference')->WithMetadataValue('PrivateAssets', 'All'))"/>
     </ItemGroup>
-
-    <!-- Print batches for debug purposes -->
     <Message Text="Batch for .nupkg: ReferenceCopyLocalPaths = @(_ReferenceCopyLocalPaths), ReferenceCopyLocalPaths.DestinationSubDirectory = %(_ReferenceCopyLocalPaths.DestinationSubDirectory) Filename = %(_ReferenceCopyLocalPaths.Filename) Extension = %(_ReferenceCopyLocalPaths.Extension)" Importance="High" Condition="'@(_ReferenceCopyLocalPaths)' != ''" />
-
     <ItemGroup>
-      <!-- Add file to package with consideration of sub folder. If empty, the root folder is chosen. -->
-      <BuildOutputInPackage Include="@(_ReferenceCopyLocalPaths)" TargetPath="../../analyzers/dotnet/cs"/>
+      <BuildOutputInPackage Include="@(_ReferenceCopyLocalPaths)" TargetPath="/analyzers/dotnet/cs/%(_ReferenceCopyLocalPaths.Filename)%(_ReferenceCopyLocalPaths.Extension)"/>
     </ItemGroup>
   </Target>
 </Project>
