--- a/test/Wodsoft.ComBoost.Test.Common/Wodsoft.ComBoost.Test.Common.csproj
+++ b/test/Wodsoft.ComBoost.Test.Common/Wodsoft.ComBoost.Test.Common.csproj
@@ -26,7 +26,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Wodsoft.ComBoost.Data.Core\Wodsoft.ComBoost.Data.Core.csproj" />
-    <ProjectReference Include="..\..\src\Wodsoft.ComBoost.SourceGenerators\Wodsoft.ComBoost.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
+    <ProjectReference Include="..\..\src\Wodsoft.ComBoost.Distributed\Wodsoft.ComBoost.Distributed.csproj" />
+    <ProjectReference Include="..\..\src\Wodsoft.ComBoost.SourceGenerators\Wodsoft.ComBoost.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\..\src\Wodsoft.ComBoost\Wodsoft.ComBoost.csproj" />
   </ItemGroup>
 
