--- a/src/Wodsoft.ComBoost.Distributed.CAP/Wodsoft.ComBoost.Distributed.CAP.csproj
+++ b/src/Wodsoft.ComBoost.Distributed.CAP/Wodsoft.ComBoost.Distributed.CAP.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <Description>ComBoost CAP分布式事务支持。</Description>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <Import Project="../../common.props" />
 
   <ItemGroup>
-    <PackageReference Include="DotNetCore.CAP" Version="5.1.0" />
+    <PackageReference Include="DotNetCore.CAP" Version="7.2.0" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 
