--- a/test/Wodsoft.ComBoost.Distributed.CAP.Test/Wodsoft.ComBoost.Distributed.CAP.Test.csproj
+++ b/test/Wodsoft.ComBoost.Distributed.CAP.Test/Wodsoft.ComBoost.Distributed.CAP.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetCore.CAP.InMemoryStorage" Version="5.1.0" />
-    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="5.1.0" />
+    <PackageReference Include="DotNetCore.CAP.InMemoryStorage" Version="7.2.0" />
+    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="7.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
