Domain template bind to ASP.NET Core Endpoint

--- a/test/Wodsoft.ComBoost.AspNetCore.Test/Wodsoft.ComBoost.AspNetCore.Test.csproj
+++ b/test/Wodsoft.ComBoost.AspNetCore.Test/Wodsoft.ComBoost.AspNetCore.Test.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Wodsoft.ComBoost.AspNetCore\Wodsoft.ComBoost.AspNetCore.csproj" />
     <ProjectReference Include="..\Wodsoft.ComBoost.Test.Common\Wodsoft.ComBoost.Test.Common.csproj" />
+    <ProjectReference Include="..\..\src\Wodsoft.ComBoost.SourceGenerators.AspNetCore\Wodsoft.ComBoost.SourceGenerators.AspNetCore.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
 </Project>
